force-app/main/default/objects/Class__c/Class__c.object-meta.xml
<CustomObject>
    <description>Created By: BN
Business Unit: Geekwise Users
Purpose: To Track Geekwise Classes</description>
    <label>Class</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>