force-app/main/default/objects/Class__c/fields/Attendance_Type__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Type__c</fullName>
    <label>Attendance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-Person</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>