force-app/main/default/objects/Class__c/fields/Attendance_Type_Graphic_URL__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Type_Graphic_URL__c</fullName>
    <description>Created By: CC
Department: WFT
Purpose: Determine what Attendance Type Graphic URL to display.</description>
    <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) +

CASE(TEXT(Attendance_Type__c),
&quot;Virtual&quot;, &quot;resource/WFT/WFTRegistration/virtual_tag_high.png&quot;,


&quot;resource/WFT/WFTRegistration/in_person_tag_high.png&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendance Type Graphic URL</label>
    <type>Text</type>
</CustomField>