force-app/main/default/objects/Class__c/fields/Badge_Graphic_URL__c.field-meta.xml
<CustomField>
    <fullName>Badge_Graphic_URL__c</fullName>
    <description>Created By: CC
Department: WFT
Purpose: Display graphic for class badges.</description>
    <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) +

CASE(TEXT(Class__c),
&quot;Websites for Beginners&quot;, &quot;resource/WFT/WFTRegistration/websites_badge.png&quot;,

&quot;Mobile-Friendly Websites&quot;, &quot;resource/WFT/WFTRegistration/mobile_badge.png&quot;,

&quot;Javascript for Beginners&quot;, &quot;resource/WFT/WFTRegistration/javascript_badge.png&quot;,

&quot;React&quot;, &quot;resource/WFT/WFTRegistration/react_badge.png&quot;,

&quot;resource/WFT/WFTRegistration/specialty_badge.png&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Badge Graphic URL</label>
    <type>Text</type>
</CustomField>