force-app/main/default/objects/Class__c/fields/Capacity_Reached_Do_Not_Display__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Reached_Do_Not_Display__c</fullName>
    <description>GS
WFT
Purpose: Checks whether the # of Registered Students is equal to or greater than the Class Capacity. Used with Rich Text on Lightning Page.</description>
    <formula>Num_Students_Registered__c &gt;=  Class_Capacity__c</formula>
    <label>Capacity Reached (Do Not Display)</label>
    <type>Checkbox</type>
</CustomField>