force-app/main/default/objects/Class__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <description>Created By: AF
Business Unit: Geekwise Users
Purpose: Select class type for use in other processes
Populated: Auto via Web form</description>
    <label>Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Websites for Beginners</fullName>
            </value>
            <value>
                <fullName>Mobile-Friendly Websites</fullName>
            </value>
            <value>
                <fullName>Javascript for Beginners</fullName>
            </value>
            <value>
                <fullName>Intro to Angular2 (Part I of II)</fullName>
            </value>
            <value>
                <fullName>Intro to Angular2 (Part II of II)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>React</fullName>
            </value>
            <value>
                <fullName>Intro to Angular2 (Part I of II) (Virtual Class)</fullName>
                <isActive>false</isActive>
                <label>Intro to Angular2 (Part I of II) (Virtual Class)</label>
            </value>
            <value>
                <fullName>Intro to Angular2 (Part II of II) (Virtual Class)</fullName>
                <isActive>false</isActive>
                <label>Intro to Angular2 (Part II of II) (Virtual Class)</label>
            </value>
            <value>
                <fullName>Javascript for Beginners (Virtual Class)</fullName>
                <isActive>false</isActive>
                <label>Javascript for Beginners (Virtual Class)</label>
            </value>
            <value>
                <fullName>Mobile-Friendly Websites (Virtual Class)</fullName>
                <isActive>false</isActive>
                <label>Mobile-Friendly Websites (Virtual Class)</label>
            </value>
            <value>
                <fullName>React (Virtual Class)</fullName>
                <isActive>false</isActive>
                <label>React (Virtual Class)</label>
            </value>
            <value>
                <fullName>Websites for Beginners (Virtual Class)</fullName>
                <isActive>false</isActive>
                <label>Websites for Beginners (Virtual Class)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>