force-app/main/default/objects/Class__c/fields/Class_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Class_Capacity__c</fullName>
    <defaultValue>27</defaultValue>
    <description>Created By: AF
Business Unit: Geekwise Users
Purpose: Display max students allowed to register for the class
Populate: Default value, manual adjustment</description>
    <label>Class Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>