force-app/main/default/objects/Class__c/fields/Class_Cost__c.field-meta.xml
<CustomField>
    <fullName>Class_Cost__c</fullName>
    <defaultValue>250.00</defaultValue>
    <description>Created By: AF
Business Unit: Geekwise Users
Purpose: Displays the cost of the class
Populated: Default value, manual adjustment</description>
    <label>Class Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>