force-app/main/default/objects/Class__c/fields/Class_Description__c.field-meta.xml
<CustomField>
    <fullName>Class_Description__c</fullName>
    <description>Created By: AF
Business Unit: Geekwise Users
Purpose: Details what will be taught in the class
Populated: Auto via Process, manual if Class is &quot;Other&quot;</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If this class is of type &quot;Other&quot;, please fill out this field with a description of the course.</inlineHelpText>
    <label>Class Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>