force-app/main/default/objects/Class__c/fields/Class_Length__c.field-meta.xml
<CustomField>
    <fullName>Class_Length__c</fullName>
    <label>Class Length</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>6 Weeks</fullName>
            </value>
            <value>
                <fullName>7 Weeks</fullName>
            </value>
            <value>
                <fullName>12 Weeks</fullName>
            </value>
            <value>
                <fullName>14 Weeks</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>