force-app/main/default/objects/Class__c/fields/Class_Nights__c.field-meta.xml
<CustomField>
    <fullName>Class_Nights__c</fullName>
    <description>Created By: AF
Business Unit: Geekwise Users
Purpose: Display the nights a class will be held
Populated: Manual/Auto via Flow</description>
    <label>Class Nights</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>WFT_Class_Nights</valueSetName>
    </valueSet>
</CustomField>