force-app/main/default/objects/Class__c/fields/Class_Order__c.field-meta.xml
<CustomField>
    <fullName>Class_Order__c</fullName>
    <description>Created By: CC
Department: WFT
Purpose: Determine Order of Classes</description>
    <formula>CASE(TEXT(Class__c), 
     &quot;Websites for Beginners&quot;, 1, 
     
     &quot;Mobile-Friendly Websites&quot;, 2,

     &quot;Javascript for Beginners&quot;, 3, 

     &quot;React&quot;, 4, 

     &quot;Intro to Angular2 (Part I of II)&quot;, 5,

     &quot;Intro to Angular2 (Part II of II)&quot;, 6,
10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The order classes are intended to be taken starting from zero. A non standard class name is given a value of ten.</inlineHelpText>
    <label>Class Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>