force-app/main/default/objects/Class__c/fields/Class_Skill_Level__c.field-meta.xml
<CustomField>
    <fullName>Class_Skill_Level__c</fullName>
    <description>Created By: AF
Business Unit: Geekwise Users
Purpose: Displays the skill level of the current class
Populated: Auto via Web form/Process</description>
    <label>Class Skill Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beginner</fullName>
            </value>
            <value>
                <fullName>Intermediate</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>