force-app/main/default/objects/Class__c/fields/Co_Teacher__c.field-meta.xml
<CustomField>
    <fullName>Co_Teacher__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Created By: AF
Business Unit: Geekwise Users
Purpose: Relates a Contact record as a Co=Teacher for the Class
Populated: Manual</description>
    <label>Co-Teacher</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Classes (Co-Teacher)</relationshipLabel>
    <relationshipName>Classes_CoTaught</relationshipName>
    <type>Lookup</type>
</CustomField>