force-app/main/default/objects/Class__c/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <description>CC For Displaying a simplified name on the website</description>
    <formula>IF(ISPICKVAL(Class__c, &apos;Other&apos;), Other__c, TEXT(Class__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For Displaying a Simplified Name on the website</inlineHelpText>
    <label>Display Name</label>
    <type>Text</type>
</CustomField>