force-app/main/default/objects/Class__c/fields/Dont_Allow_Registrations__c.field-meta.xml
<CustomField>
    <fullName>Dont_Allow_Registrations__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When this box is checked, students will no longer be able to register for this class on the website. Registrations may still be added manually by a Geekwise Staff Member or System Administrator.</inlineHelpText>
    <label>Don&apos;t Allow Registrations</label>
    <type>Checkbox</type>
</CustomField>