force-app/main/default/objects/Class__c/fields/Dont_Display_on_Website__c.field-meta.xml
<CustomField>
    <fullName>Dont_Display_on_Website__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created By: BN
Business Unit: Geekwise Users
Purpose: To prevent certain courses from showing up on the website
Populated: Manually</description>
    <label>Don&apos;t Display on Website</label>
    <type>Checkbox</type>
</CustomField>