force-app/main/default/objects/Class__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Created By: AF
Business Unit: Geekwise Users
Purpose: Displays the End Date of the current Class
Populated: Auto via Web form, manual adjustment</description>
    <encryptionScheme>None</encryptionScheme>
    <label>End Date</label>
    <type>Date</type>
</CustomField>