force-app/main/default/objects/Class__c/fields/Instruction_Time__c.field-meta.xml
<CustomField>
    <fullName>Instruction_Time__c</fullName>
    <label>Instruction Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>36 hrs. Instruction</fullName>
                <default>true</default>
                <label>36 hrs. Instruction</label>
            </value>
            <value>
                <fullName>18 hrs. Instruction</fullName>
            </value>
            <value>
                <fullName>84 hrs. Instruction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>