force-app/main/default/objects/Class__c/fields/Instructor__c.field-meta.xml
<CustomField>
    <fullName>Instructor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Created By: AF
Business Unit: Geekwise Users
Purpose: Relates a Contact record as an Instructor for this class
Populated: Manual</description>
    <label>Instructor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Qualified_Instructor__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Classes (Instructor)</relationshipLabel>
    <relationshipName>Classes_Instructed</relationshipName>
    <type>Lookup</type>
</CustomField>