force-app/main/default/objects/Class__c/fields/Name_Graphic__c.field-meta.xml
<CustomField>
    <fullName>Name_Graphic__c</fullName>
    <formula>IMAGE(

CASE(TEXT(Class__c),
&quot;Websites for Beginners&quot;, &quot;/resource/WFT/WFTRegistration/websites-for-beginners.png&quot;,

&quot;Mobile-Friendly Websites&quot;, &quot;/resource/WFT/WFTRegistration/mobile-friendly-websites.png&quot;,

&quot;Javascript for Beginners&quot;, &quot;/resource/WFT/WFTRegistration/javascript-for-beginners.png&quot;,

&quot;React.&quot;, &quot;/resource/WFT/WFTRegistration/react.png&quot;,

&quot;/resource/WFT/WFTRegistration/specialty-classes.png&quot;), TEXT(Class__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name Graphic</label>
    <type>Text</type>
</CustomField>