force-app/main/default/objects/Class__c/fields/Num_Students_Registered__c.field-meta.xml
<CustomField>
    <fullName>Num_Students_Registered__c</fullName>
    <description>Created By: AF
Business Unit: Geekwise Users
Purpose: Counts the number of registrations related to a singe Class record
Populated: Auto, Roll-Up Summary</description>
    <label># Students Registered</label>
    <summaryFilterItems>
        <field>Registration__c.Dropped__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Registration__c.Dropped_w_Credit__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Registration__c.Class__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>