force-app/main/default/objects/Class__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <description>Created By: AF
Business Unit: Geekwise Users
Purpose: Displays the Name of the Class being taught, if it is of type &quot;Other&quot;
Populated: Manual</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What class is being taught? (Note: only fill out this section if &quot;Other&quot; is selected for the Class pick list)</inlineHelpText>
    <label>Other</label>
    <length>80</length>
    <type>Text</type>
</CustomField>