force-app/main/default/objects/Class__c/fields/Posted_to_Website__c.field-meta.xml
<CustomField>
    <fullName>Posted_to_Website__c</fullName>
    <description>Created By: DA Business Unit: Geekwise Users Purpose: To Track when Geekwise Classes are posted on the website.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date the class will appear on the website.</inlineHelpText>
    <label>Posted to Website</label>
    <type>Date</type>
</CustomField>