force-app/main/default/objects/Class__c/fields/Registration_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Registration_Page_URL__c</fullName>
    <formula>&apos;https://bitwiseindustries.secure.force.com/WFTClassRegistration?Name=&apos; + SUBSTITUTE( Display_Name__c, &apos; &apos;, &apos;%20&apos;)+ &apos;&amp;Type=&apos; + TEXT(Attendance_Type__c) + &apos;&amp;Market=&apos; + TEXT(Market__c) + &apos;&amp;TimeZone=&apos; + TEXT(Time_Zone__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration Page URL</label>
    <type>Text</type>
</CustomField>