force-app/main/default/objects/Class__c/fields/Removed_from_Website__c.field-meta.xml
<CustomField>
    <fullName>Removed_from_Website__c</fullName>
    <description>Created By: DA Business Unit: Geekwise Users Purpose: To Track when Geekwise Classes are posted on the website.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date the class will be removed from the website.</inlineHelpText>
    <label>Removed from Website</label>
    <type>Date</type>
</CustomField>