force-app/main/default/objects/Class__c/fields/Round_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Round_Start_Date__c</fullName>
    <description>Created By: AF
Business Unit: Geekwise Users
Purpose: Displays the start date of the Round this class belongs to.
Populated: Auto via Flow</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Round Start Date</label>
    <type>Date</type>
</CustomField>