force-app/main/default/objects/Class__c/fields/Scheduled_Time__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Time__c</fullName>
    <label>Scheduled Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>6:00pm - 9:00pm</fullName>
                <default>true</default>
                <label>6:00pm - 9:00pm</label>
            </value>
            <value>
                <fullName>6:00pm - 9:00pm Eastern Time</fullName>
                <isActive>false</isActive>
                <label>6:00pm - 9:00pm Eastern Time</label>
            </value>
            <value>
                <fullName>6:00pm - 9:00pm Pacific Time</fullName>
                <isActive>false</isActive>
                <label>6:00pm - 9:00pm Pacific Time</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>