force-app/main/default/objects/Class__c/fields/Section_Number__c.field-meta.xml
<CustomField>
    <fullName>Section_Number__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Created By: CC
Purpose: Number in order to identify the different sections of a class in a round.</description>
    <inlineHelpText>Starting at 1 the Section number will increase for each identical class created.</inlineHelpText>
    <label>Section Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>