force-app/main/default/objects/Class__c/fields/Skill_Icon__c.field-meta.xml
<CustomField>
    <fullName>Skill_Icon__c</fullName>
    <formula>IMAGE(
CASE(
     Class_Skill_Level__c,
     &quot;Beginner&quot;, &quot;https://i.imgur.com/qqSed7J.png&quot;,
     &quot;Intermediate&quot;, &quot;https://i.imgur.com/wqQJEJM.png&quot;,
     &quot;Advanced&quot;, &quot;https://i.imgur.com/bzT8cG7.png&quot;,
    null), TEXT(Class_Skill_Level__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Skill Icon</label>
    <type>Text</type>
</CustomField>