force-app/main/default/objects/Class__c/fields/Space__c.field-meta.xml
<CustomField>
    <fullName>Space__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By: AF
Business Unit: Geekwise Users
Purpose: Displays and links the Space in which the Class will be held
Populated: Manual</description>
    <label>Space</label>
    <referenceTo>Space__c</referenceTo>
    <relationshipLabel>Classes</relationshipLabel>
    <relationshipName>Classes</relationshipName>
    <type>Lookup</type>
</CustomField>