force-app/main/default/objects/Class__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Created By: AF
Business Unit: Geekwise Users
Purpose: Display the date a class starts
Populated: Auto via Flow Screen, manual adjustment</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>