force-app/main/default/objects/Class__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Created By: AF; Business Unit: Geekwise Users; Purpose: Updates Class Status based on Start and End date; Populated: Auto via Formula</description>
    <formula>IF( Start_Date__c &gt; TODAY(), &apos;Upcoming&apos;, 
IF( End_Date__c &lt; TODAY(), &apos;Past&apos;, &apos;Active&apos; ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>