force-app/main/default/objects/Class__c/fields/Student_Success_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Student_Success_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By: RS
Purpose: Drop Policy Build</description>
    <label>Student Success Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Classes</relationshipName>
    <type>Lookup</type>
</CustomField>