force-app/main/default/objects/Class__c/fields/Sunday_Before_Class__c.field-meta.xml
<CustomField>
    <fullName>Sunday_Before_Class__c</fullName>
    <description>GS
Business Unit: WFT
Purpose: Always displays Sunday before class start date.</description>
    <formula>Start_Date__c - (WEEKDAY(Start_Date__c) - 1)</formula>
    <inlineHelpText>Will always display the Sunday before Class Start Date.</inlineHelpText>
    <label>Sunday Before Class</label>
    <type>Date</type>
</CustomField>