force-app/main/default/objects/Class__c/fields/Syllabus__c.field-meta.xml
<CustomField>
    <fullName>Syllabus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By: AF
Business Unit: Geekwise Users
Purpose: Links the Class Syllabus to the Class record
Populated: Auto via Process</description>
    <label>Syllabus</label>
    <referenceTo>Syllabus__c</referenceTo>
    <relationshipLabel>Classes</relationshipLabel>
    <relationshipName>Classes</relationshipName>
    <type>Lookup</type>
</CustomField>