force-app/main/default/objects/Class__c/fields/Teachers_Assistant__c.field-meta.xml
<CustomField>
    <fullName>Teachers_Assistant__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Created By: AF
Business Unit: Geekwise Users
Purpose: Links a Contact as a TA for this Class
Populated: Manual</description>
    <inlineHelpText>The TA for this course (This is a PAID position)</inlineHelpText>
    <label>Teacher&apos;s Assistant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Classes (Teacher&apos;s Assistant)</relationshipLabel>
    <relationshipName>Class_TA</relationshipName>
    <type>Lookup</type>
</CustomField>