force-app/main/default/objects/Class__c/fields/Zoom_Edit_Page__c.field-meta.xml
<CustomField>
    <fullName>Zoom_Edit_Page__c</fullName>
    <description>Created By: CC
Purpose: Turns Meeting Id into a link to the Zoom Meeting Page.</description>
    <formula>HYPERLINK(&apos;https://zoom.us/meeting/&apos; + Zoom_Meeting_ID__c , Zoom_Meeting_ID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zoom Edit Page</label>
    <type>Text</type>
</CustomField>