force-app/main/default/objects/Class__c/fields/Zoom_Meeting_ID__c.field-meta.xml
<CustomField>
    <fullName>Zoom_Meeting_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Zoom Meeting ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>