force-app/main/default/objects/Class__c/validationRules/Class_Capacity_Less_Than_Or_Equal_To_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Class_Capacity_Less_Than_Or_Equal_To_0</fullName>
    <active>true</active>
    <description>GS
WFT
The class capacity cannot be less than or equal to 0.</description>
    <errorConditionFormula>Class_Capacity__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Class_Capacity__c</errorDisplayField>
    <errorMessage>Class Capacity must be greater than 0.</errorMessage>
</ValidationRule>