force-app/main/default/objects/Class__c/listViews/WFT_Classes_Past.listView-meta.xml
<ListView>
    <fullName>WFT_Classes_Past</fullName>
    <columns>NAME</columns>
    <columns>Time_Zone__c</columns>
    <columns>Instructor__c</columns>
    <columns>Num_Students_Registered__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Class_Nights__c</columns>
    <columns>Space__c</columns>
    <columns>Class_Length__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>PAST</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Class__c.General</value>
    </filters>
    <label>WFT Classes - Past</label>
    <sharedTo>
        <group>Tech_Support_Team</group>
        <group>VP_Team</group>
        <group>WFT_Instructor_Team</group>
        <group>WFT_TA_Team</group>
        <group>Workforce_Training_Team</group>
    </sharedTo>
</ListView>