force-app/main/default/objects/Class__c/listViews/WFT_Classes_Upcoming_Next_Month.listView-meta.xml
<ListView>
    <fullName>WFT_Classes_Upcoming_Next_Month</fullName>
    <columns>Num_Students_Registered__c</columns>
    <columns>NAME</columns>
    <columns>Instructor__c</columns>
    <columns>Zoom_Link__c</columns>
    <columns>Posted_to_Website__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Market__c</columns>
    <columns>Time_Zone__c</columns>
    <columns>Class_Nights__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Class__c.General</value>
    </filters>
    <filters>
        <field>Start_Date__c</field>
        <operation>greaterThan</operation>
        <value>THIS_MONTH</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Upcoming</value>
    </filters>
    <label>WFT Classes - Upcoming Next Month</label>
    <sharedTo>
        <role>Workforce_Training_Team</role>
    </sharedTo>
</ListView>